--- a/public/index.html
+++ b/public/index.html
@@ -57,10 +57,12 @@
 
           </table>
         </div>
-        <div>
-            <div id="testFunction" class="btnContainer"><button class="backBtn">BACK</button></div>
-            <div id="testPlot" class="btnContainer"><button class="backBtn">PLOT</button></div>
-        </div>
+
+        <div class="abc">
+            <div id="plotBtnFunct" class="btnContainer"><button class="backBtn">PLOT</button></div>         
+            <div id="addBtnFunct" class="btnContainer"><button class="backBtn">ADD</button></div>          
+            <div id="backBtnFunct" class="btnContainer"><button class="backBtn">BACK</button></div>
+        </div>  
     </div>
 
 
