--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
         </div>  
 
         <div>
-        <table id="source-coord">
+        <table id="coordinates-table">
             <tr>
               <th></th>
               <th>Coordinates</th>
