--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,12 @@
 
     <!--[if lte IE 8]><p id="warn">This site requires IE9 or newer.</p><![endif]-->
 
-    <div id="display">
-        <svg id="map" class="fill-screen" xmlns="http://www.w3.org/2000/svg" version="1.1"></svg>
-        <canvas id="animation" class="fill-screen"></canvas>
+  <div id="display">
+        <svg id="map" class="fill-screen" xmlns="http://www.w3.org/2000/svg" version="1.1"></svg> 
+        <canvas id="animation" class="fill-screen"></canvas> 
         <canvas id="overlay" class="fill-screen"></canvas>
         <svg id="foreground" class="fill-screen" xmlns="http://www.w3.org/2000/svg" version="1.1"></svg>
-    </div>
+    </div> 
 
     <div id="sponsor" class="invisible">
         <p><span id="sponsor-hide" class="text-button invisible"> ✕ </span>community</p>
@@ -39,7 +39,7 @@
 
     <div class="container">
         <div class="abc">
-            <div id="plotBtnFunct" class="btnContainer"><button class="backBtn">PLOT</button></div>         
+            <!-- <div id="plotBtnFunct" class="btnContainer"><button class="backBtn">PLOT</button></div>          -->
             <div id="addBtnFunct" class="btnContainer"><button class="backBtn">ADD</button></div>          
             <div id="backBtnFunct" class="btnContainer"><button class="backBtn">BACK</button></div>
         </div>  
@@ -50,7 +50,7 @@
               <th></th>
               <th>Coordinates</th>
             </tr>
-
+<!-- 
             <tr>
               <td>SOURCE</td>
               <td><input id="source-coord-field" type="text" value="" pattern="[0-9]+"></td>
@@ -59,7 +59,7 @@
             <tr>
               <td>DESTINATION</td>
               <td><input id="destination-coord-field" type="text" value="" pattern="[0-9]"></td>
-            </tr>
+            </tr> -->
 
           </table>
         </div>
@@ -161,8 +161,8 @@
                 <!--  <span
                 class="proj text-button" id="atlantis" title="Atlantis">A</span> – <span
                 class="proj text-button" id="azimuthal_equidistant" title="Azimuthal Equidistant">AE</span> – <span
-                class="proj text-button" id="conic_equidistant" title="Conic Equidistant">CE</span> – <span
-                class="proj text-button" id="equirectangular" title="Equirectangular">E</span> – --> <span
+                class="proj text-button" id="conic_equidistant" title="Conic Equidistant">CE</span> – – --> <span
+                class="proj text-button" id="equirectangular" title="Equirectangular">E</span> - <span
                 class="proj text-button" id="orthographic" title="Orthographic">O</span>
                <!--   – <span
                 class="proj text-button" id="stereographic" title="Stereographic">S</span> – <span
