--- a/public/index.html
+++ b/public/index.html
@@ -149,9 +149,9 @@
                 <!--  - <span
                 class="text-button" id="animate-wave-back" title="Wind">Wave</span> -->
                </p>
-            <p class="wind-mode">Overlay | <span
-                class="text-button" id="overlay-off">None</span> <!-- – <span
-                class="text-button" id="overlay-wind" title="Wind Speed">Wind</span> – <span
+            <p class="wind-mode invisible">Overlay |  <span
+                class="text-button" id="overlay-off">None</span> – <span
+                class="text-button" id="overlay-wind" title="Wind Speed">Wind</span><!-- – <span
                 class="text-button" id="overlay-temp" title="Temperature">Temp</span> – <span
                 class="text-button" id="overlay-relative_humidity" title="Relative Humidity">RH</span> – <span
                 class="text-button" id="overlay-air_density" title="Air Density">AD</span> – <span
@@ -163,7 +163,7 @@
                 class="text-button" id="overlay-mean_sea_level_pressure" title="Mean Sea Level Pressure">MSLP</span>
             </p> -->
            
-            <p class="ocean-mode invisible">Animate |<span
+            <p class="ocean-mode ">Animate |<span
                 class="text-button" id="animate-wind" title="Wind">Wind</span> - <span
                 class="text-button" id="animate-currents" title="Current">Current</span> - 
                 <span
@@ -172,9 +172,8 @@
                
             </p>
             <p class="ocean-mode invisible">Overlay | <span
-                class="text-button" id="overlay-ocean-off" title="None">None</span> 
-               <!--  – <span
-                class="text-button" id="overlay-currents" title="Currents">Currents</span> -->
+                class="text-button" id="overlay-ocean-off" title="None">None</span> – <span
+                class="text-button" id="overlay-currents" title="Currents">Currents</span>
             </p>
             <!--<p class="ocean-mode invisible"><span style="visibility:hidden">Overlay</span> |</p>-->
             <p>Projection |
